hphp/hack/test/typecheck/xhp_attr_22.php.exp
File "xhp_attr_22.php", line 12, characters 25-40:
Invalid xhp value (Typing[4110])
File "xhp_attr_22.php", line 7, characters 38-45:
This is an object of type Subclass
File "xhp_attr_22.php", line 12, characters 25-40:
It is incompatible with an object of type Superclass
